<resources>
    <string name="app_name">Birthday Helper</string>
    <string name="contactos">Contactos</string>
    <string name="config">Configurar Felicitaciones</string>
    <string name="solo_noti">Aviso: SOLO notificación</string>
    <string name="sms">Aviso: Enviar SMS</string>

    <string name="seccion_editar">EditarContacto</string>
    <string name="imagen_contacto_listview">Imagen del Contacto</string>
    <string name="nombre">Nombre:</string>
    <string name="puntos">...</string>
    <string name="Enviar_sms">¿Enviar SMS?</string>
    <string name="telefono">Teléfono:</string>
    <string name="fecha_naci">Fecha de Nacimiento:</string>
    <string name="mens">Mensaje:</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>

    <string name="hora_notif">Hora de notificación</string>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Nueva notificación</string>

    <string name="canal_notificacion">canalalphadelta</string>
</resources>