<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewContactActivity">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="137dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="209dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="28dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cbNotificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/Enviar_sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditar"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinTelfs"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toEndOf="@+id/tvTelfs"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tvTelfs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:labelFor="@id/spinTelfs"
        android:text="@string/telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <TextView
        android:id="@+id/tvFechaNaci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/fecha_naci"
        app:layout_constraintEnd_toStartOf="@+id/etFechaNaci"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTelfs" />

    <EditText
        android:id="@+id/etFechaNaci"
        android:layout_width="218dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinTelfs" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/mens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFechaNaci" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="371dp"
        android:layout_height="76dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensaje" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="341dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/puntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>